--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -15,10 +15,11 @@
     <ion-list class="list-borderless">
       <p></p>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails" nav-direction=forward >
+        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails" nav-direction=forward>
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+          class="energized">00</span></span> <i
           class="col icon ion-ios-plus-outline grey text-right"></i></p>
       </ion-item>
       <p></p>
@@ -26,7 +27,8 @@
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+          class="energized">00</span></span> <i
           class="col icon ion-ios-plus-outline grey text-right"></i></p>
       </ion-item>
       <p></p>
@@ -34,7 +36,8 @@
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+          class="energized">00</span></span> <i
           class="col icon ion-ios-plus-outline grey text-right"></i></p>
       </ion-item>
       <p></p>
@@ -42,7 +45,8 @@
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+          class="energized">00</span></span> <i
           class="col icon ion-ios-plus-outline grey text-right"></i></p>
       </ion-item>
       <p></p>
@@ -50,7 +54,8 @@
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+          class="energized">00</span></span> <i
           class="col icon ion-ios-plus-outline grey text-right"></i></p>
       </ion-item>
       <p></p>
@@ -58,14 +63,15 @@
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+          class="energized">00</span></span> <i
           class="col icon ion-ios-plus-outline grey text-right"></i></p>
       </ion-item>
     </ion-list>
   </ion-content>
   <ion-footer-bar class="shoppingcart-footer-bar">
     <div class="row row-no-padding row-center ">
-      <span class="col-20 padding-left">全选</span>
+      <span class="col-20 padding-left"><i class="icon ion-ios-circle-outline"></i> 全选</span>
       <span class="col">合计 : <strong class="assertive">￥360.00</strong></span>
       <button class="col button  button-assertive"><strong>去结算</strong> <i>(10)</i></button>
     </div>
