元亨祥母婴商城

--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -16,7 +16,7 @@
       <div class="col-60 userinfo-details">
         <strong class="light">黄晓敏 <i>一级会员</i></span>
         </strong>
-        <p><span>余额 : 3650.00</span></p>
+        <p><span ui-sref="myincome">余额 : 3650.00</span></p>
       </div>
       <div class="col-20">
         <a  ng-href="#/myntegral" nav-direction=forward  class="light subdued">领取积分 <i class="icon ion-ios-arrow-forward"></i>
@@ -27,7 +27,7 @@
       <a ng-href="#/organizingdata" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/data.png" alt="">
         <p>完善资料</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/order.png" alt="">
+      <a ng-href="#/myorder" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/order.png" alt="">
         <p>我的订单</p>
       </a>
       <a ng-href="#/mycoupon" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/coupon.png" alt="">
