--- a/www/templates/account/mywallet.html
+++ b/www/templates/account/mywallet.html
@@ -9,7 +9,7 @@
   </ion-nav-title>
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" id="mywallet">
     <form name="mywallet">
-       <div class="row-wrap text-center light-bg">
+       <div class="row-wrap text-center light-bg" ui-sref="myincome">
          <img class="col" ng-src="img/account/coupon@1.png" alt="">
          <strong  class=" col grey ">我的余额</strong>
          <h2  class=" col positive">￥3600.00</h2>
