--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -73,7 +73,7 @@
     <div class="row row-no-padding row-center ">
       <span class="col-20 padding-left"><i class="icon ion-ios-circle-outline"></i> 全选</span>
       <span class="col">合计 : <strong class="assertive">￥360.00</strong></span>
-      <button class="col button  button-assertive"><strong>去结算</strong> <i>(10)</i></button>
+      <button ui-sref="revieworder" class="col button  button-assertive"><strong>去结算</strong> <i>(10)</i></button>
     </div>
   </ion-footer-bar>
 </ion-view>
