--- a/www/css/main.css
+++ b/www/css/main.css
@@ -111,16 +111,17 @@
   color: #585858;
 }
 
-#productlist {
+#productlist, #myorderlist, #myincomelist {
   height: 100%;
 }
 
-#productlist-tab .row {
+#productlist-tab .row, #myorderlist-tab .row, #myincomelist-tab .row {
+  border-top: 1px solid rgba(221, 221, 221, 0.3);
   margin-bottom: 0;
   padding-bottom: 0;
 }
 
-#productlist-tab .active {
+#productlist-tab .active, #myorderlist-tab .active, #myincomelist-tab .active {
   color: #FF93BC;
   border-bottom: 3px solid #FF93BC;
 }
@@ -168,6 +169,11 @@
 
 .shoppingcart-footer-bar strong {
   font-size: 1rem !important;
+}
+
+#revieworder a.address {
+  background: url('../img/account/state@1.png') #ffffff repeat-x bottom;
+  background-size: 25% 0.3rem;
 }
 
 .tool-tip {
