--- a/www/templates/main/productdetails.html
+++ b/www/templates/main/productdetails.html
@@ -77,7 +77,7 @@
     <ion-tab title="首页" icon-off="ion-ios-home-outline" icon-on="ion-home" href="#/tab/main">
     </ion-tab>
 
-    <button class="tab col-40 button  button-positive ">加入购物车</button>
+    <button ui-sref="tab.shoppingcart" class="tab col-40 button  button-positive ">加入购物车</button>
 
   </ion-tabs>
 </ion-view>
