元亨祥母婴商城

--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -54,10 +54,16 @@
       <a ng-href="#/contactus" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/contactus.png" alt="">
         <p>联系客服</p>
       </a>
+      <a ng-href="#/signin" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/data.png" alt="">
+        <p>每日签到</p>
+      </a>
+      <a ng-href="#/questionnaire" nav-direction=forward class="col-33 padding-top "><img ng-src="img/account/opinion.png" alt="">
+        <p>问卷调查</p>
+      </a>
     </div>
     <p class="padding-top"></p>
     <div class="padding">
-      <a ng-href="#/login" class="button button-positive full-image ">退出登录</a>
+      <a ng-href="#/login" nav-direction=forward class="button button-positive full-image ">退出登录</a>
     </div>
   </ion-content>
 </ion-view>
