--- a/www/css/account.css
+++ b/www/css/account.css
@@ -58,8 +58,6 @@
   font-weight: 500;
 }
 
-
-
 .col.ion-ios-arrow-back {
   font-size: 1.6rem;
 }
@@ -132,12 +130,12 @@
   border-left: 1px solid rgba(221, 221, 221, 0.5);
 }
 
-#myntegral .myntegral-show  {
-  color: #ffffff!important;
+#myntegral .myntegral-show {
+  color: #ffffff !important;
   padding: 1.5rem 2rem;
 }
 
-#myntegral .myntegral-show h1{
+#myntegral .myntegral-show h1 {
   margin-top: 0;
   padding-top: 0;
   color: #ffffff;
@@ -146,4 +144,74 @@
 #myntegral .getntegral {
   padding-left: 0.5rem;
   border-left: 1px solid rgba(221, 221, 221, 0.5);
+}
+
+.radio-icon.ion-checkmark {
+  color: #FF93BC;
+}
+
+#signin {
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/account/account-bg.jpg");
+  background-size: cover;
+}
+
+#signin .signin-header {
+  height: 8rem;
+}
+
+#signin .signin-day {
+  display: inline-block;
+  background-color: #ffffff;
+  width: 6rem !important;
+  height: 6rem !important;
+  border-radius: 50%;
+  padding-top: 1.5rem;
+  border: 5px solid rgba(221, 221, 221, 0.3);
+}
+
+#signin .signin-day p {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+
+}
+
+#signin .integral-num {
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.3rem;
+}
+
+#signin #sign-date span.col {
+  position: relative;
+}
+
+#signin #sign-date span.active {
+  color: #FF93BC;
+}
+
+#signin #sign-date span.active:before {
+  content: '已签';
+  position: absolute;
+  color: #ffffff;
+  font-size: 10px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  right: -2px;
+  bottom: -2px;
+  z-index: 2000;
+}
+
+#signin #sign-date span.active:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-bottom: 1.8rem solid #FF93BC;
+  border-left: 1.8rem solid transparent;
+  right: 0;
+  bottom: 0;
 }
