--- a/www/templates/account/resetpassword.html
+++ b/www/templates/account/resetpassword.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true">
-  <ion-content overflow-scroll="false" class="stable-bg" id="userresetpassword">
+  <ion-content overflow-scroll="false" class="stable-bg no-nav-header" id="userresetpassword">
     <div class="row row-horizontal-around row-top  light account-top-bg">
       <i class="col icon ion-ios-arrow-back" ng-click="$ionicGoBack()"></i>
       <strong class="col-70 text-center">重置密码</strong >
