--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true">
-  <ion-content overflow-scroll="false" class="stable-bg" id="userlogin">
+  <ion-content overflow-scroll="false" class="stable-bg no-nav-header" id="userlogin">
     <div class="row row-horizontal-around row-top  light account-top-bg">
         <i class="col icon ion-ios-arrow-back" ng-click="$ionicGoBack()"></i>
       <strong class="col-70 text-center"> 登录</strong>
