--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true">
-  <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true"  delegate-handle="main-content">
+  <ion-content overflow-scroll="false" class="stable-bg no-nav-header" has-bouncing="true"  delegate-handle="main-content">
     <div class="row text-center  light row-center " id="main-search">
       <span class="col-15">深圳 <i class="icon ion-arrow-down-b"></i></span>
       <input type="text" class="col-75" placeholder="  请输入关键字"/>
