--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,7 +1,7 @@
 <ion-view hide-nav-bar="true">
   <ion-content overflow-scroll="false" class="stable-bg no-nav-header" has-bouncing="true"  delegate-handle="main-content">
     <div class="row text-center  light row-center " id="main-search">
-      <span class="col-15">深圳 <i class="icon ion-arrow-down-b"></i></span>
+      <span class="col-15 nowrap">深圳 <i class="icon ion-arrow-down-b"></i></span>
       <input type="text" class="col-75" placeholder="  请输入关键字"/>
       <i class="col  icon ion-ios-search"></i>
     </div>
