--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,13 +4,34 @@
 .row-horizontal-center {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
   justify-content: center;
 }
 
 /* 网格布局row水平方向均匀分布左右留有距离*/
 .row-horizontal-around {
-  -ms-flex-pack: distribute;
+  -webkit-justify-content: space-around;
+  -moz-justify-content: space-around;
   justify-content: space-around;
+}
+
+.row-horizontal-start {
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  justify-content: flex-start;
+}
+
+.row-horizontal-end {
+  -webkit-justify-content: flex-end;
+  -moz-justify-content: flex-end;
+  justify-content: flex-end;
+}
+
+.row-horizontal-between {
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
 }
 
 .center-block {
